fixed some deps issues, fixed issue with deb package size, added jlink and jdeps maven plugin